2007-05-28 Peter Brett <peter@peter-b.co.uk>

	* include/prototype.h, include/struct.h, src/Makefile.am,
	  src/s_textbuffer.c: Add managed text buffers to libgeda.

	  In order to facilitate loading symbols & schematics from memory
	  without an extensive rewrite, this patch adds an API for reading
	  memory arrays a bit like a file.

          Using memory streams & fgets would be nicer, but unfortunately
	  memory streams are a GNU libc extension.

2007-05-25 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated version to 20070526 in prep for the next
	release.  Also changed shared library's version number to 29:0:0.

2007-05-13 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/o_text_basic.c: Fixed a memory leak reported by Peter Brett
	(found using valgrind).  Thanks.

2007-04-28  Stuart Brorson <sdb AT cloud9 DOT net>
	* src/o_attrib.c, src/o_complex_basic.c, src/s_tile.c:
	made changes to o_attrib_slot_update and
	o_attrib_search_pinseq to enable searching slotted parts 
	by pinseq.  Added o_complex_count_pins as part of project.
	
2007-04-22  Peter Brett <peter@peter-b.co.uk>
	* src/o_box_basic.c: Fix some unused variable warnings in libgeda.
	
	  In a recent patch libgd was disabled by default (i.e.  HAS_LIBGD
	  was unset by default).  This exposed some variable declarations
	  which should have been #ifdefed out, but weren't.  Although most
	  were later cleared up, some were missed.
	
2007-04-21  Mike Jarabek  <mjarabek@sentex.ca>

	* src/f_print.c:
	  - Added %%Orientation to DSC block in PS output, fixing SF#1680214.

2007-04-21 Carlos Nieves Onega <cnieves (AT) iespana (DOT) es>

	* src/o_bus_basic.c, src/o_circle_basic.c, src/o_line_basic.c,
	  src/o_pin_basic.c: 
	  - Put unused variables inside #ifdef HAS_LIBGD.
	  - Reverted the patch below. Those variables are used when 
	    compiling with libgd.
	  - Removed unused variables.

	* configure.ac: Don't enable libgd by default.